manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tan-dara9280-daranextjsproject-deployment
  labels:
    app: tan-dara9280-daranextjsproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tan-dara9280-daranextjsproject
  template:
    metadata:
      labels:
        app: tan-dara9280-daranextjsproject
    spec:
      containers:
        - name: tan-dara9280-daranextjsproject-container
          image: pipejet/tan-dara9280-daranextjsproject:0
          ports:
            - containerPort: 3000
