manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tan-dara9280-daranextjsproject-service
spec:
  type: NodePort
  selector:
    app: tan-dara9280-daranextjsproject
  ports:
    - protocol: TCP
      port: 8121
      targetPort: 3000
